Fix minor padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ h3 {
   }
 
   .container {
-    background-color: #E6E6FA;
+    background-color: white;
     position: relative;
     z-index: 6;
     top: 590px;
